plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id "com.diffplug.spotless" version "6.25.0"
    id 'org.openapi.generator' version "7.0.0"
}

group = 'ru.mentee'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

ext {
    versions = [
            testcontainersVersion: "1.19.7"
    ]
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.liquibase:liquibase-core'
    implementation("io.swagger.core.v3:swagger-annotations:2.2.40")
    implementation("org.openapitools:jackson-databind-nullable:0.2.8")

    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
    implementation("org.springdoc:springdoc-openapi-ui:1.8.0")

    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform("org.testcontainers:testcontainers-bom:${versions.testcontainersVersion}")
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'

}

//tasks.named('test') {
//    useJUnitPlatform()
//}

spotless {
    java {
        importOrder()
        removeUnusedImports()
        googleJavaFormat()
        endWithNewline()
    }
}

openApiGenerate {
    generatorName = "spring"
    inputSpec = "$rootDir/src/main/resources/static/Booking-Service-API.yaml"
    outputDir = "$buildDir/generated"
    apiPackage = "ru.mentee.api.generated.controller"
    modelPackage = "ru.mentee.api.generated.dto"
    configOptions = [
            dateLibrary: "java8",
            interfaceOnly: "true",
            useTags: "true",
            performBeanValidation: "true",
            useBeanValidation: "true",
            useSpringBoot3: "true",
            delegatePattern: "true"
    ]
}

compileJava.dependsOn tasks.openApiGenerate